@@ -506,3 +506,4 @@ translation.export.heading=Translation export
 include.translations.question=Include the translations in the PDF file?
 slide.text=Slide
 autoplay.vid.label=Autoplay videos in live panel
+advance.on.live.label=Advance schedule on live display
